--- a/IrrduinoServer/README
+++ b/IrrduinoServer/README
@@ -4,6 +4,14 @@ IrrduinoServer
 This is the server component of Irrduino.  It's a Python Google App Engine
 application.
 
+Running
+-------
+
+Make sure you have the Google App Engine for Python installed and run the
+following from the current directory:
+
+  dev_appserver.py .
+
 Global TODOs
 ------------
 
