--- a/README
+++ b/README
@@ -30,3 +30,9 @@ Setup
 
 To use these applications, you'll need to configure some server names. Search
 for YOUR-SERVER-NAME in the code. See also IrrduinoServer/README.
+
+
+Project Disclaimer
+------------------
+
+This is not an official Google product (experimental or otherwise), it is just code that happens to be owned by Google.
